# **********************************************************
#      2023 : Arthur JEULIN
#      google-test : 
#      Created by Arthur JEULIN on 12/14/2023.
# **********************************************************
cmake_minimum_required(VERSION 3.27.5)


add_subdirectory(units)
add_subdirectory(integration)
